--- a/Portifilo.html
+++ b/Portifilo.html
@@ -99,29 +99,29 @@
         <div class="scroller" data-speed="fast">
         <ul class="tag-list scroller__inner">
 
-          <li><img src="logo/HTML.webp" alt="HTML Logo"></li>
-          <li><img src="logo/CSS.webp" alt="CSS Logo"></li>
-          <li><img src="logo/Javascript.png" alt="JavaScript Logo"></li>
-          <li><img src="logo/jquery.jpg" alt="jQuery Logo"></li>
-          <li><img src="logo/Python.png" alt="python Logo"></li>
-          <li><img src="logo/C_Logo.png" alt="c Logo"></li>
-          <li><img src="logo/Csharp_Logo.png" alt="c# Logo"></li>
-          <li><img src="logo/Sql_logo.png" alt="java Logo"></li>
+          <li><img src="HTML.webp" alt="HTML Logo"></li>
+          <li><img src="CSS.webp" alt="CSS Logo"></li>
+          <li><img src="Javascript.png" alt="JavaScript Logo"></li>
+          <li><img src="jquery.jpg" alt="jQuery Logo"></li>
+          <li><img src="Python.png" alt="python Logo"></li>
+          <li><img src="C_Logo.png" alt="c Logo"></li>
+          <li><img src="Csharp_Logo.png" alt="c# Logo"></li>
+          <li><img src="Sql_logo.png" alt="java Logo"></li>
         </ul>
       </div>
           <div class="scroller" data-speed="fast">
           <ul class="tag-list scroller__inner">
-          <li><img src="logo/GitHub.png" alt="GitHub Logo"></li>
-          <li><img src="logo/visual-studio.png" alt="VisualStudio Logo"></li>
-          <li><img src="logo/sap-crystal.webp" alt="SAPCrystalReports Logo"></li>
-          <li><img src="logo/MYSQLServer.jpg" alt="SQLServer"></li>
-          <li><img src="logo/Oracle-Logo.jpg" alt="Oracle Logo"></li>
-          <li><img src="logo/Tableau.jpeg" alt="Tableau Logo"></li>
-          <li><img src="logo/ASPNET-MVC-WEB-API.jpg" alt="ASP.NetMVC Logo"></li>
-          <li><img src="logo/Jenkins.webp" alt="Jenkins Logo"></li>
-          <li><img src="logo/Docker.svg" alt="Docker Logo"></li>
-          <li><img src="logo/MongoDB-Logo.png" alt="MongoDB Logo"></li>
-          <li><img src="logo/AMS.png" alt="AWS Logo"></li>
+          <li><img src="GitHub.png" alt="GitHub Logo"></li>
+          <li><img src="visual-studio.png" alt="VisualStudio Logo"></li>
+          <li><img src="sap-crystal.webp" alt="SAPCrystalReports Logo"></li>
+          <li><img src="MYSQLServer.jpg" alt="SQLServer"></li>
+          <li><img src="Oracle-Logo.jpg" alt="Oracle Logo"></li>
+          <li><img src="Tableau.jpeg" alt="Tableau Logo"></li>
+          <li><img src="ASPNET-MVC-WEB-API.jpg" alt="ASP.NetMVC Logo"></li>
+          <li><img src="Jenkins.webp" alt="Jenkins Logo"></li>
+          <li><img src="Docker.svg" alt="Docker Logo"></li>
+          <li><img src="MongoDB-Logo.png" alt="MongoDB Logo"></li>
+          <li><img src="AMS.png" alt="AWS Logo"></li>
         </ul>   
        
     </section>
