--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     
 </head>
 <body>
+     <div class="main-container">
     <div id="drippingColorsBackground"></div>
 
     <header>
@@ -169,6 +170,6 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap');
     </style>
-
+</div>
 </body>
 </html>
