--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     
     <title>Portfolio of Sai Praveen Kudapa</title>
     <link rel="stylesheet" href="styles.css">
-    
+    <link rel="icon" href="image2.png" type="image/x-icon">
+    <link rel="shortcut icon" href="image2.png" type="image/x-icon">
 </head>
 <body>
      <div class="main-container">
