--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
     <title>Sai Praveen K</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="Tablog.jpeg" type="image/x-icon">
+    <link rel="icon" href="Tablog.jpg" type="image/x-icon">
     <link rel="shortcut icon" href="Tablog.jpg" type="image/x-icon">
 </head>
 <body>
