--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div class="main" >
             <div class="images">
                 
-                <img src="image.jpeg" alt="Sai Praveen" style="max-width:60%;margin-left: 150px; height:auto;">
+                <img src="profile.png" alt="Sai Praveen" style="max-width:60%;margin-left: 150px; height:auto;">
             </div>
             <div class="detail">
                 
@@ -131,7 +131,7 @@
     </section>
 
     <section id="contact" class="section contact-section">
-    <div class="container">
+    <div class="container" >
         <h2>Contact Information</h2>
         <ul class="contact-info">
             <li><i class="bi bi-envelope-fill"></i> saipraveenkudapa@gmail.com</li>
