--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
             </div>
             <div class="detail">
                 
-                <p>Hi there! I'm Sai Praveen Kudapa, a software developer with a flair for turning complex code into user-friendly experiences. As a proud alumnus of Stevens Institute of Technology, I've taken my computer science chops from the classrooms of New Jersey.</p>
-                <p>At <a href="https://sivasaiit.com/" target="_blank">SS IT Solutions</a>, I was the tech maestro behind a sleek ERP system, boosting productivity and efficiency with my coding symphony. From the structural elegance of C# to the interactive finesse of ReactJS, I make software that not only works well but feels good.</p>
-                <p>Ready to design solutions that resonate and innovate? Feel free to reach out to me.</p>
+                <p>Hello! I’m Sai Praveen Kudapa, an enthusiastic software developer with a knack for transforming intricate code into intuitive user experiences. As an alumnus of the Stevens Institute of Technology, my journey in computer science has progressed from the theoretical rigors of New Jersey's academia to the dynamic world of tech applications.</p>
+                <p>At <a href="https://sivasaiit.com/" target="_blank">SS IT Solutions</a>,  I became the architect behind a sophisticated ERP system, harmonizing the orchestral complexities of coding with the rhythm of workplace productivity. My forte lies in the structural robustness of C# and the engaging dynamics of ReactJS, where I compose software that not only operates seamlessly but also engages delightfully.</p>
+                <p>With the addition of the AWS Certified Developer - Associate credential to my repertoire, I'm eager to bring my proven skills in cloud-based frameworks and scalable solutions to a full-time role. This certification is a testament to my commitment to staying at the vanguard of technology, ready to tackle the challenges of developing, deploying, and maintaining cutting-edge applications in the cloud.</p>
+                <p>I am actively seeking a full-time opportunity where I can contribute my blend of development expertise, cloud proficiency, and a user-centered approach to create impactful software solutions. If you’re looking for someone who can blend technical know-how with a strategic vision to drive business value, let's connect.</p>
                 <a href="SaiPraveenKudapa.pdf" class="resume-button" target="_blank">Checkout My Resume </a>
             </div>
         </div>
