--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
     <section id="Home" class="section" style="padding-top: 100px;">
         <div class="main" class="justify-text">
 
-            <div class="video">
-                <video autoplay loop muted style="max-width:100%; float: left;">
-                    <source src="Video.mp4" type="video/mp4">
-                </video>
-            </div>
+           <div class="video">
+            <video class="desktop-video" autoplay loop muted style="max-width:100%; float: left;">
+                <source src="Video.mp4" type="video/mp4">
+            </video>
+            <video class="mobile-video" autoplay loop muted style="max-width:100%; float: left;">
+                <source src="Mobile.mp4" type="video/mp4">
+            </video>
+         </div>
+
             
             <div class="detail">
                 <h1><span>Hi, It's Me</span><br><span style="color:#244D61;max-width:90%;"></span></h1>
@@ -132,8 +136,8 @@
     </section>
 
     <section id="contact" class="section contact-section">
-    <div class="container" >
-        <h2>Contact Information</h2>
+    <div class="container">
+        <h2>Contact Me</h2>
         <ul class="contact-info">
             <li><i class="bi bi-envelope-fill"></i> saipraveenkudapa@gmail.com</li>
             <li><i class="bi bi-telephone-fill"></i> +1 (732) 585-8362</li>
@@ -146,7 +150,8 @@
         </ul>
         <p class="copy-rights">&copy; 2024 Sai Praveen Kudapa. All Rights Reserved.</p>
     </div>
-    </section>
+</section>
+
 
     
      <!-- Include jQuery once, before other scripts that depend on it -->
