--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav>
             <a href="#" class="active">Home</a>
             <a href="#about">About Me</a>
-            <a href="#skills">Skills</a>
+            <a href="#skills">Technologies</a>
             <a href="#contact">Contact</a>
         </nav>
     </header>
@@ -87,9 +87,9 @@
 
     </section>
 
-    <section id="skills" class="section" style="padding-top: 50px;">
+    <section id="skills" class="section" style="padding-top: 70px;">
 
-        <h1><span style="color:#244D61; ;">Skills</span></h1>
+        <h1><span style="color:#244D61; ;">Tools & Technologies</span></h1>
         <div></div>
         <div></div>
         <div></div>
