--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               like sales and inventory using tools such as Tableau.
             </p>
             <p>
-              As a <strong>Full Stack Developer</strong> at Siva Sai IT
+              As a <strong>Data Analyst</strong> at Siva Sai IT
               Solutions (SSIT), I developed and optimized an ERP system that
               improved financial reporting, employee management, and customer
               engagement.
