--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <nav>
       <a href="#home" class="active-link">Home</a>
       <a href="#about">About Me</a>
-      <a href="#skills">Technologies</a>
+      <!-- <a href="#skills">Technologies</a> -->
       <a href="#contact">Contact</a>
     </nav>
   </header>
@@ -70,17 +70,10 @@
             <span id="typed"></span>
           </h1>
           <p>
-            Specialized in software development, with extensive experience
-            in web development, cloud technologies, and data analytics.
+            Data Analyst specializing in data processing, visualization, and predictive analytics. Skilled in SQL, Python, and AWS, transforming complex data into actionable business insights.
           </p>
           <div class="social">
-            <a
-              href="https://github.com/saipraveenkudapa"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              <i class="bi bi-github"></i>
-            </a>
+            
             <a
               href="https://www.linkedin.com/in/sai-praveen-k-787257186/"
               target="_blank"
@@ -106,32 +99,13 @@
               Hello, I'm <strong>Sai Praveen Kudapa</strong>, a dedicated
               software developer with a <strong>Master's degree in Computer
               Science</strong> from Stevens Institute of Technology. With over
-              3 years of experience, I specialize in full-stack development,
-              cloud computing, and data analytics.
+              4 years of experience, I specialize in cloud computing and data analytics.
             </p>
-            <p>
-              As a <strong>Freelance Web Developer</strong> at Arize Digital, I
-              focus on building responsive full-stack applications. I developed
-              and maintained web applications, integrating multiple payment
-              gateways, such as Stripe and Plaid, ensuring PCI-DSS compliance
-              for secure financial transactions.
-            </p>
-            <p>
-              In my role as a <strong>Data Analyst</strong> at Abraham Sons &
-              Leathers, I created real-time dashboards to track key metrics
-              like sales and inventory using tools such as Tableau.
-            </p>
-            <p>
-              As a <strong>Data Analyst</strong> at Siva Sai IT
-              Solutions (SSIT), I developed and optimized an ERP system that
-              improved financial reporting, employee management, and customer
-              engagement.
-            </p>
-            <p>
-              I am also an AWS Associate Developer and Google Certified Data
-              Analyst, with a strong foundation in cloud services and data
-              analytics.
-            </p>
+            <p> As a <strong>Data Analyst</strong> at Walgreens, I specialize in optimizing SQL queries and automating data pipelines using AWS services such as Redshift, Glue, Lambda, and S3. I develop real-time Tableau dashboards connected with AWS Athena, providing key insights into business performance. My role also involves deploying predictive analytics models on Amazon SageMaker and implementing sentiment analysis using Amazon Comprehend to enhance customer experience. </p> 
+            <p> Previously, as a <strong>Data Analyst Intern</strong> at Walgreens, I automated data pipelines for Shopify and Zoey platforms, reducing manual reporting efforts and improving data consistency. I designed and implemented Power BI dashboards for real-time KPI tracking, conducted A/B testing for marketing optimization, and developed SQL-based financial reports to support leadership decisions. </p> 
+            <p> During my tenure as a <strong>Jr. Data Analyst</strong> at Vertafore, I focused on building interactive dashboards in Tableau and Power BI, developing ETL pipelines, and leading predictive analytics projects to enhance demand forecasting. I also worked on SQL-based data mining, automated data validation scripts, and integrated sentiment analysis to improve customer engagement strategies. </p> 
+            <p> As a <strong>Data Analyst Intern</strong> at Siva Sai IT Solutions, I built and maintained data pipelines, conducted exploratory data analysis to optimize inventory levels, and automated reporting workflows using SQL and Python. I also worked on predictive modeling to enhance forecasting accuracy and provided insights to optimize supply chain operations. </p>
+           
             <a href="SaiPraveenKudapa.pdf" class="resume-button" target="_blank" rel="noopener noreferrer">
               Checkout My Resume
             </a>
@@ -140,7 +114,7 @@
       </div>
     </section>
 
-    <!-- Skills Section -->
+    <!-- Skills Section 
     <section id="skills" class="section">
       <div class="section-content">
         <h2 class="section-title" data-aos="fade-up">Tools & Technologies</h2>
@@ -150,32 +124,23 @@
             <li><img src="logo/HTML.webp" alt="HTML Logo" loading="lazy" /></li>
             <li><img src="logo/CSS.webp" alt="CSS Logo" loading="lazy" /></li>
             <li><img src="logo/Javascript.png" alt="JavaScript Logo" loading="lazy" /></li>
-            <li><img src="logo/jquery.jpg" alt="jQuery Logo" loading="lazy" /></li>
             <li><img src="logo/Python.png" alt="Python Logo" loading="lazy" /></li>
-            <li><img src="logo/C_Logo.png" alt="C Logo" loading="lazy" /></li>
-            <li><img src="logo/Csharp_Logo.png" alt="C# Logo" loading="lazy" /></li>
             <li><img src="logo/Sql_logo.png" alt="SQL Logo" loading="lazy" /></li>
           </ul>
         </div>
 
         <div class="scroller" data-speed="fast" data-aos="fade-up" data-aos-delay="150">
           <ul class="tag-list scroller__inner">
-            <li><img src="logo/GitHub.png" alt="GitHub Logo" loading="lazy" /></li>
-            <li><img src="logo/visual-studio.png" alt="Visual Studio Logo" loading="lazy" /></li>
-            <li><img src="logo/sap-crystal.webp" alt="SAP Crystal Reports Logo" loading="lazy" /></li>
             <li><img src="logo/MYSQLServer.jpg" alt="SQL Server" loading="lazy" /></li>
             <li><img src="logo/Oracle_Logo.jpg" alt="Oracle Logo" loading="lazy" /></li>
             <li><img src="logo/Tableau.jpeg" alt="Tableau Logo" loading="lazy" /></li>
-            <li><img src="logo/ASPNET-MVC-WEB-API.jpg" alt="ASP.NET MVC Logo" loading="lazy" /></li>
-            <li><img src="logo/Jenkins.webp" alt="Jenkins Logo" loading="lazy" /></li>
-            <li><img src="logo/Docker.svg" alt="Docker Logo" loading="lazy" /></li>
             <li><img src="logo/MongoDB-Logo.png" alt="MongoDB Logo" loading="lazy" /></li>
             <li><img src="logo/AMS.png" alt="AWS Logo" loading="lazy" /></li>
           </ul>
         </div>
       </div>
     </section>
-
+   -->
     <!-- Contact Section -->
     <section id="contact" class="section contact-section">
       <div class="section-content">
