--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <p> During my tenure as a <strong>Jr. Data Analyst</strong> at Vertafore, I focused on building interactive dashboards in Tableau and Power BI, developing ETL pipelines, and leading predictive analytics projects to enhance demand forecasting. </p> 
             <p> As a <strong>Data Analyst Intern</strong> at Siva Sai IT Solutions, I built and maintained data pipelines, conducted exploratory data analysis to optimize inventory levels, and automated reporting workflows using SQL and Python. </p>
            
-            <a href="SaiPraveenKudapa.pdf" class="resume-button" target="_blank" rel="noopener noreferrer">
+            <a href="SaiPraveenKudapa.docx" class="resume-button" target="_blank" rel="noopener">
               Checkout My Resume
             </a>
           </div>
