--- a/index.html
+++ b/index.html
@@ -101,9 +101,8 @@
               Science</strong> from Stevens Institute of Technology. With over
               4 years of experience, I specialize in cloud computing and data analytics.
             </p>
-            <p> As a <strong>Data Analyst</strong> at Walgreens, I specialize in optimizing SQL queries and automating data pipelines using AWS services. I develop real-time Tableau dashboards connected with AWS Athena, providing key insights into business performance.  </p> 
-            <p> Previously, as a <strong>Data Analyst Intern</strong> at Walgreens, I automated data pipelines for Shopify and Zoey platforms, reducing manual reporting efforts and improving data consistency. </p> 
-            <p> During my tenure as a <strong>Jr. Data Analyst</strong> at Vertafore, I focused on building interactive dashboards in Tableau and Power BI, developing ETL pipelines, and leading predictive analytics projects to enhance demand forecasting. </p> 
+            <p> As a <strong>Data Analyst</strong> at NRG Energy, Inc, I specialize in optimizing SQL queries and automating data pipelines using AWS services. I develop real-time Tableau dashboards connected with AWS Athena, providing key insights into business performance.  </p> 
+            <p> During my tenure as a <strong>Jr. Data Analyst</strong> at Vsevse Systems, I focused on building interactive dashboards in Tableau and Power BI, developing ETL pipelines, and leading predictive analytics projects to enhance demand forecasting. </p> 
             <p> As a <strong>Data Analyst Intern</strong> at Siva Sai IT Solutions, I built and maintained data pipelines, conducted exploratory data analysis to optimize inventory levels, and automated reporting workflows using SQL and Python. </p>
            
             <a href="SaiPraveenKudapa.docx" class="resume-button" target="_blank" rel="noopener">
